# Image-Data-Augmentation-CLI

./: .gitignore  README.md  imgaug.bat  install_requirements.bat  pyproject.toml  requirements.txt  run_imgaug.bat
.github/workflows/: ci.yml
configs/: example.yaml  yolo_masks.yaml
image_aug_cli/: __init__.py  annotations.py  cli.py  config.py  engine.py  io.py  pipeline.py
